<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="help">About aDice Revised</string>
	<string name="delayforsearch">Delay time for incremental search</string>
	<string name="incrementalsearch">Incremental Search</string>
	<string name="menudicset">Dictionary Settings</string>
	<string name="menuadddic">Add Dictionary</string>
	<string name="settings">Settings</string>
	<string name="ButtonName_Clear">Clear</string>
	<string name="ButtonName_Serach">Search</string>
	<string name="app_name">aDice R</string>
	<string name="setting_name">aDice Settings</string>
	<string name="fileselector_name">Select dictionary</string>
	<string name="delaytitle">Delay for Search</string>
	<string name="conjudelaysummary">Delay time to start conjugation search</string>
	<string name="conjudelaytitle">Delay for Conjugation Search</string>
	<string name="searchsettingtitle">Search Settings</string>
	<string name="dictionaryimporttitle">Import Dictionary</string>
	<string name="dictionarymanagementtitle">Dictionary Management</string>
	<string name="dictionarypathtitle">Path of the dictionary</string>
	<string name="dictionarynametitle">Name of the dictionary</string>
	<string name="numberofresulttitle">Number of results</string>
	<string name="conjusearchtitle">Conjugation Search</string>
	<string name="conjusearchsummaryon">Enable additional search</string>
	<string name="conjusearchsummaryoff">Disbale additional search</string>
	<string name="englishtitle">English dictionary</string>
	<string name="englishsummaryon">Index is English</string>
	<string name="englishsummaryoff">Index is not English</string>
	<string name="enabledictionarytitle">Enable dictionary</string>
	<string name="enabledictionarysummaryon">This dictionary is Enabled</string>
	<string name="enabledictionarysummaryoff">This dictionary is Disabled</string>
	<string name="moveuptitle">Move Up</string>
	<string name="movedowntitle">Move Down</string>
	<string name="removedictionarytitle">Remove the dictionary from library</string>
	<string name="toastadded">Added[%s]...</string>
	<string name="toasterror">Could not load[%s]...</string>
	<string name="toastremoved">Removed[%s]...</string>
	<string name="createindexdialog">Now creating index...</string>
	<string name="resulttitlehtml">Result of %s</string>
	<string name="loadingdictionarydialog">Now loading dictionaries...</string>
	<string name="adddictionarytitle">Import PDIC/Unicode file</string>
	<string name="hinttext">input here</string>
	<string name="noresulthtml">No result.</string>
	<string name="morebtn">more</string>
	<string name="description">aDice Revised is the viewer for dictionaries of PDIC format.</string>
	<string name="manual"> &lt;a href=&quot;http://sites.google.com/site/aquamarinepandora/home/adice&quot;&gt;Introduction of aDice Revised.&lt;/a&gt; </string>
	<string name="about_name">About aDice Revised...</string>
	<string name="fontsizeindex">Font size of Index</string>
	<string name="fontsizephone">Font size of Phone</string>
	<string name="fontsizetrans">Font size of Contents</string>
	<string name="fontsizesample">Font size of Sample</string>
	<string name="thaialphabet">Use Internal Thai font</string>
	<string name="thaisummaryon">Use Internal Thai font</string>
	<string name="thaisummaryoff">Not use Internal Thai font</string>
	<string name="fonttitle">Font</string>
	<string name="fastscroll">Fast Scroll</string>
	<string name="fastscrollsummaryon">Use thumb of scrollbar</string>
	<string name="fastscrollsummaryoff">Not use thumb of scrollbar</string>
	<string name="dicname_eijiro">Eijiro %s</string>
	<string name="dicname_waeijiro">Waeiiro %s</string>
	<string name="dicname_reijiro">Reijiro %s</string>
	<string name="dicname_ryakujiro">Ryakugoro %s</string>
	<string name="crash_report">Crash Report</string>
	<string name="crash_report_text">Do you send a stacktrace log to the developer?</string>
	<string name="clipboardsearch">Clipboard Search</string>
	<string name="clipboardsearchsummaryon">Clipboard Search is enabled</string>
	<string name="clipboardsearchsummaryoff">Clipboard Search is desabled</string>
	<string name="fontmanager">Font Manager</string>
	<string name="fontmanager_name">Font Manager</string>
	<string name="addfont">Add font</string>
	<string name="label_ok">OK</string>
	<string name="label_yes">Yes</string>
	<string name="label_no">No</string>
	<string name="label_cancel">Cancel</string>
	<string name="remove_font">Remove font</string>
	<string name="remove_font_message">%s has been removed.</string>
	<string name="remove_font_confirm">Do you remove the font?\n%s</string>
	<string name="deffontsettingtitle">Default Font Settings</string>
	<string name="fontsettingtitle">Font Settings</string>
	<string name="fontsettings_name">Font Settings</string>
	<string name="fontindex">Font of Index</string>
	<string name="fontphone">Font of Phone</string>
	<string name="fonttrans">Font of Contents</string>
	<string name="fontsample">Font of Sample</string>
	<string name="dldictionarytitle">Download Free Dictionary</string>
	<string name="install_name">Install dictionary</string>
	<string name="install_url">file:///android_asset/install.html</string>
	<string name="install_title">Download</string>
	<string name="download_ok">Download successed</string>
	<string name="download_ng">Download failed</string>
	<string name="download_process">In Processing...</string>
	<string name="welcome_title">Welcome to aDice Revised!</string>
	<string name="welcome_message">aDice Revised is a dictionary viewer for PDIC format.\n\nNow you can download FREE dictionaries . ( Settings -> Download Dictionary )\n\nOr put PDIC file on the SD Card , you can use it.</string>
	<string name="label_close">Close</string>
	<string name="label_download">Download Now</string>
	<string name="menu_copy_index">Copy index</string>
	<string name="menu_copy_all">Copy all</string>
	<string name="menu_share">Share</string>
	<string name="menu_mushroom">Set index to Mushroom</string>
	<string name="menu_mushroom_all">Set all to Mushroom</string>
	<string name="dicname_pdej">PDEJ2005 English-Japanese Dictionary</string>
	<string name="dicname_edict">EDICT Japanese-English Dictionary</string>
	<string name="dicname_webster">Webster English Dictionary 1913</string>
	<string name="dicname_ichirofj">ICHIRO French-Japanese Dictionary</string>
	<string name="menu_add_wordlist">Add to Wordbook</string>
	<string name="add_wordlist_msg">You need the \"TanGo Wordbook\" Application.\nDo you want to download now？</string>
	<string name="normalize">Normalization of search word</string>
</resources>
