<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory
        android:title="@string/searchsettingtitle"
        app:iconSpaceReserved="false"
        >

        <SwitchPreferenceCompat
            android:key="normalizesearch"
            android:title="@string/normalize"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dictionaryimporttitle"
        app:iconSpaceReserved="false"
        >

        <Preference
            android:key="AddDictionary"
            android:title="@string/adddictionarytitle"
            app:iconSpaceReserved="false"
            />

        <Preference
            android:key="DownloadDictionary"
            android:title="@string/dldictionarytitle"
            app:iconSpaceReserved="false"
            />

        <Preference
            android:key="progress"
            android:title="@string/download_process"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            android:widgetLayout="@layout/preference_progress" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="managementcategory"
        android:title="@string/dictionarymanagementtitle"
        app:iconSpaceReserved="false"
        >

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
